fixed backspacing

--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,31 @@ body {
   flex-grow: 1;
 }
 
+.workspace-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.workspace-welcome-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  background-color: #1b1c26;
+}
+
 .tabs-container {
   display: flex;
   position: sticky;
   top: 0;
   z-index: 2;
-  background-color: rgb(42, 38, 38);
+  background-color: rgba(42, 38, 38, 0.95);
+}
+
+.sidebar-container {
+  width: 12em;
+  background-color: rgba(42, 38, 38, 0.95);
 }
 
 .tab {
@@ -59,7 +78,6 @@ body {
 
 .editor-container {
   display: flex;
-  height: 100%;
   flex-grow: 1;
 }
 
